--- a/app/src/main/res/layout/item_desafio.xml
+++ b/app/src/main/res/layout/item_desafio.xml
@@ -45,13 +45,41 @@
         app:layout_constraintTop_toBottomOf="@id/txtNombre"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/layoutEtiquetas"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="@id/txtDescripcion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtDescripcion">
+
+        <TextView
+            android:id="@+id/txtDificultad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Intermedio"
+            android:textColor="#00bfa6"
+            android:textSize="13sp" />
+
+        <TextView
+            android:id="@+id/txtLenguaje"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Java"
+            android:textColor="#00bfa6"
+            android:textSize="13sp"
+            android:layout_marginStart="12dp" />
+    </LinearLayout>
+
     <ProgressBar
         android:id="@+id/hpBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="10dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/txtDescripcion"
+        app:layout_constraintTop_toBottomOf="@id/layoutEtiquetas"
         app:layout_constraintStart_toStartOf="@id/txtDescripcion"
         app:layout_constraintEnd_toEndOf="parent" />
 
