--- a/app/src/main/res/layout/item_pregunta.xml
+++ b/app/src/main/res/layout/item_pregunta.xml
@@ -64,6 +64,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
+        <TextView
+            android:id="@+id/txtRespuestaCorrecta"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:textColor="#16A34A"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
+
         <Button
             android:id="@+id/btnEnviar"
             android:layout_width="wrap_content"
