--- a/app/src/main/res/layout/activity_mis_postulaciones.xml
+++ b/app/src/main/res/layout/activity_mis_postulaciones.xml
@@ -41,6 +41,8 @@
                 android:textColor="#00bfa6"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:gravity="center"
+                android:textAlignment="center"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp" />
 
