--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -56,6 +56,8 @@
         android:text="Crear cuenta"
         app:layout_constraintTop_toBottomOf="@id/editRegisterPassword"
         app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="#00bfa6"
+        android:textColor="#111"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp" />
 
