--- a/app/src/main/res/layout/item_publicacion.xml
+++ b/app/src/main/res/layout/item_publicacion.xml
@@ -146,6 +146,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
+                android:backgroundTint="#00bfa6"
+                android:textColor="#111"
                 android:text="Comentar"
                 android:textAllCaps="false"
                 android:textSize="12sp" />
